<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_portfolio_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   android:background="@drawable/my_nanodegree"
    tools:context="net.colornerds.myportfolioapp.PortfolioMainActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"

        android:fontFamily="monospace"
        android:gravity="fill_horizontal"
        android:textSize="34sp"
        android:textColor="@android:color/holo_green_dark"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:id="@+id/button_grid"
        android:clipToPadding="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/capstone_btn"
            android:layout_width="272dp"
            android:layout_height="44dp"
            android:layout_row="5"
            android:layout_column="0"
            android:id="@+id/capstone"
            android:background="@drawable/wood_bckground"
            android:textColor="@android:color/background_light"
            android:textScaleX="2"
            android:textStyle="normal|bold"

            />

        <Button
            android:text="@string/go_ubi_btn"
            android:layout_width="271dp"
            android:layout_height="43dp"
            android:layout_row="4"
            android:layout_column="0"
            android:id="@+id/goubi"
            android:background="@drawable/wood_bckground"
            android:layout_marginBottom="7dp"
            android:textColor="@android:color/background_light"
            android:textScaleX="2"
            android:textStyle="normal|bold"

        />
        <Button
            android:text="@string/make_your_app_btn"
            android:layout_width="272dp"
            android:layout_height="43dp"
            android:layout_row="3"
            android:layout_column="0"
            android:id="@+id/makeyourapp"
            android:background="@drawable/wood_bckground"
            android:layout_marginBottom="7dp"
            android:textColor="@android:color/background_light"
            android:textScaleX="2"
            android:textStyle="normal|bold" />


        <Button
            android:text="@string/pop_movie_btn"
            android:layout_width="271dp"
            android:layout_height="44dp"
            android:id="@+id/popmovies"
            android:background="@drawable/wood_bckground"

            android:layout_marginBottom="7dp"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="@android:color/background_light"
            android:textScaleX="2"
            android:textColorHighlight="@android:color/holo_green_light"
            android:textStyle="normal|bold"

            />

        <Button
            android:text="@string/build_it_bigger_btn"
            android:layout_width="271dp"
            android:layout_height="43dp"
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/builditbigger"
            android:background="@drawable/wood_bckground"
            android:layout_marginBottom="7dp"
            android:textColor="@android:color/background_light"
            android:textScaleX="2"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/stock_hawk_btn"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/stockhawk"
            android:background="@drawable/wood_bckground"
            android:layout_marginBottom="7dp"
            android:layout_height="43dp"
            android:layout_width="271dp"
            android:textColor="@android:color/background_light"
            android:textScaleX="2"
            android:textStyle="normal|bold" />
    </GridLayout>


</RelativeLayout>
